tests/negative/gold/bad-literalA-test.gold
tests/negative/bad-literalA-test.toit:8:9: error: Invalid floating-point literal
  print 0x.123456P
        ^~~~~~~~~~
tests/negative/bad-literalA-test.toit:9:9: error: Invalid floating-point literal
  print 0x.123456P+
        ^~~~~~~~~~~
tests/negative/bad-literalA-test.toit:10:9: error: Invalid floating-point literal
  print 0x.123456p-
        ^~~~~~~~~~~
tests/negative/bad-literalA-test.toit:11:9: error: Invalid number literal
  print 0x.123456p+5_
        ^~~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:12:9: error: Invalid floating-point literal
  print 0x.123456p-_3
        ^~~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:13:9: error: Hexadecimal floating point numbers must have an exponent
  print 0x.123456
        ^~~~~~~~~
tests/negative/bad-literalA-test.toit:14:9: error: Hexadecimal floating point numbers must have an exponent
  print 0xabc.123456
        ^~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:15:9: error: Invalid floating-point literal
  print 0xabc.123456p-
        ^~~~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:16:9: error: Invalid number literal
  print 0xabc.123456P+5_
        ^~~~~~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:17:9: error: Invalid floating-point literal
  print 0xabc.123456P-_3
        ^~~~~~~~~~~~~~~~
tests/negative/bad-literalA-test.toit:18:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
